Title and description

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>EWBS CRM</title>
+        <title>EWBS Activities</title>
         <meta charset="utf-8">
         <meta
             name="description"
-            content="EWBS CRM for proposal, customer management and internal communication.">
+            content="EWBS Activities for mainlands and free-zones in UAE.">
         <meta
             name="keywords"
             content="EWBS, CRM, Postal">
